added new jdk11 changes